# centrebowl

./: .gitignore  CMakeLists.txt  README.md  debug_sprite_test.py  inspect_sprite_sheet.py
config/: settings.json
include/: BallSensorClient.h  BallSensorClientUnix.h  BowlingMachine.h  LaneClient.h  PinManager.h
src/: BallSensorClientUnix.cpp  BowlingMachine.cpp  LaneClient.cpp  PinManager.cpp  ball_sensor_daemon.py  config.py  game_logger.py  game_manager.py  gpio_debug.py  machine_poll.py  main.cpp  main.py  network.py
src/assets/animations/: sprite_config.py  sprite_sheet.py
src/game/: best_ball.py  five_pin.py  game_modes.py  league.py  practice.py
src/game_saves/: current_game.json
src/ui/: buttons.py  pin_area.py  screens.py  status_indicator.py
